# opam-wix

./: LICENCE.md  Makefile  README.md  dune-project  opam-wix.opam  owix.opam
.github/workflows/: main.yml
data/wix/: CustomInstallDir.wxs  CustomInstallDirDlg.wxs
doc/: README.md
scripts/: make_msi.sh
src/: cygcheck.ml  cygcheck.mli  data.ml  dune  file.ml  file.mli  main.ml  opamWixMain.ml  opam_frontend.ml  owix.ml  system.ml  system.mli  types.ml  wix.ml  wix.mli  wix_backend.ml
src/opam-make-installer/: dune  main.ml
src/opam-make-installer-bundle/: dune  main.ml
src/opam-wix/: dune  main.ml
src/opam-wix_cli/: args.ml  args.mli  dune  man.ml  man.mli
src/opam-wix_lib/: cygcheck.mli  data.ml  dune  file.ml  file.mli  installer_config.ml  installer_config.mli  ldd.ml  ldd.mli  makeself_backend.ml  makeself_backend.mli  opam_frontend.ml  opam_frontend.mli  sh_script.ml  sh_script.mli  shared_libraries.ml  shared_libraries.mli  system.ml  system.mli  types.ml  wix.ml  wix.mli  wix_backend.ml  wix_backend.mli
test/: dune
tests/: basic.t  basic_mingw.t  dune
tests/cygwin/: dune
tests/mingw/: basic.t  dune
tests/opam-wix_lib/: dune  test_ldd.ml  test_makeself_backend.ml
