(lang dune 2.7)

;------------------------------------------------------------------------;
;                                                                        ;
;    Copyright 2023 OCamlPro                                             ;
;                                                                        ;
;  All rights reserved. This file is distributed under the terms of the  ;
;  GNU Lesser General Public License version 2.1, with the special       ;
;  exception on linking described in the file LICENSE.                   ;
;                                                                        ;
;------------------------------------------------------------------------;

(name opam-wix)
(cram enable)
