opam-version: "2.0"
name: "opam-wix"
version: "0.1"
maintainer: "Mohamed Hernouf <mohamed.hernouf@ocamlpro.com>"
authors: [
    "Raja Boujbel"
    "Mohamed Hernouf"
]
tags: ["wix" "msi" "windows" "cygwin"]
license: "GPLv3"
homepage: "https://github.com/OCamlPro/opam-wix"
bug-reports: "https://github.com/OCamlPro/opam-wix/issues"
available: os = "win32" | os = "cygwin"
depends: [
  "ocaml" {build & >= "4.14.0" & < "5.0.0"}
  "ocamlfind" {build = "0.14.2+win"}
  "dune" {build & >= "2.8.5"}
  "cmdliner" {<= "1.1.1"}
  "markup"
  "crunch"
  "opam-client" {> "2.0" & < "2.2" }
  "opam-format"
]
build: [
    "dune"
    "build"
    "-j" jobs
    "-p" name
    "@runtest" {with-test}
]
dev-repo: "git+https://github.com/OCamlPro/opam-wix"
synopsis: "A tool that produces stand-alone MSI installer for opam packages"
description: """
opam-wix is command-line tool that, generates MSI installer for opam package and binaries in this way:
- It searches for executable file within specified package that should be installed in
current switch.
- It imports all required DLLs for given binary.
- It generates input and makes use of WiX toolset for generating MSI installer.
"""
flags: plugin
