opam-version: "2.0"
name: "opam-wix"
version: "0.1"
maintainer: "Mohamed Hernouf <mohamed.hernouf@ocamlpro.com>"
authors: [
    "Raja Boujbel"
    "Mohamed Hernouf"
]
tags: ["wix" "msi" "windows" "cygwin"]
license: "GPL-3.0-only"
homepage: "https://github.com/OCamlPro/opam-wix"
bug-reports: "https://github.com/OCamlPro/opam-wix/issues"
depends: [
  "ocaml" {build & >= "4.11.0"}
  "dune" {build & >= "3.2"}
  "cmdliner" {>= "1.3"}
  "markup"
  "crunch" {>= "3.3.1"}
  "opam-client" {>= "2.4" & = opam-version}
  "opam-format" {>= "2.4" & = opam-version}
  "fmt"
  "yojson"
  "ppx_deriving_yojson"
  "ppx_expect" {with-test}
]
build: [
    "dune"
    "build"
    "-j" jobs
    "-p" name
    "@runtest" {with-test}
]
dev-repo: "git+https://github.com/OCamlPro/opam-wix"
synopsis: "A tool that produces stand-alone MSI installer for opam packages"
description: """
opam-wix is command-line tool that, generates MSI installer for opam package and binaries in this way:
- It searches for executable file within specified package that should be installed in
current switch.
- It imports all required DLLs for given binary.
- It generates input and makes use of WiX toolset for generating MSI installer.
"""
flags: plugin
