(executable
 (name opamWixMain)
 (public_name opam-wix)
 (modes (native exe))
 (flags -w A-4-5-21-33-44-45-70)
 (libraries cmdliner str unix markup opam-format opam-client))

(rule
 (target dataDir.ml)
 (deps (source_tree ../data))
 (action
  (with-stdout-to %{target}
    (run ocaml-crunch ../data -m plain -o dataDir.ml))))
