;------------------------------------------------------------------------;
;                                                                        ;
;    Copyright 2023 OCamlPro                                             ;
;                                                                        ;
;  All rights reserved. This file is distributed under the terms of the  ;
;  GNU Lesser General Public License version 2.1, with the special       ;
;  exception on linking described in the file LICENSE.                   ;
;                                                                        ;
;------------------------------------------------------------------------;

(executable
 (name main)
 (public_name opam-wix)
 (modes (native exe))
 (flags -w A-4-5-21-33-44-45-70)
 (libraries cmdliner str unix markup opam-format opam-client))

(rule
 (target dataDir.ml)
 (deps (source_tree ../data))
 (action
  (with-stdout-to %{target}
    (run ocaml-crunch ../data -m plain -o dataDir.ml))))
