;------------------------------------------------------------------------;
;                                                                        ;
;    Copyright 2023 OCamlPro                                             ;
;                                                                        ;
;  All rights reserved. This file is distributed under the terms of the  ;
;  GNU Lesser General Public License version 2.1, with the special       ;
;  exception on linking described in the file LICENSE.                   ;
;                                                                        ;
;------------------------------------------------------------------------;

(library
 (name opam_wix)
 (public_name opam-wix.lib)
 (libraries opam-format opam-client markup yojson)
 (preprocess
  (pps ppx_deriving_yojson)))

(rule
 (target dataDir.ml)
 (deps (source_tree ../../data))
 (action
  (with-stdout-to %{target}
    (run ocaml-crunch ../../data -m plain -o dataDir.ml))))
