;------------------------------------------------------------------------;
;                                                                        ;
;    Copyright 2025 OCamlPro                                             ;
;                                                                        ;
;  All rights reserved. This file is distributed under the terms of the  ;
;  GNU Lesser General Public License version 2.1, with the special       ;
;  exception on linking described in the file LICENSE.                   ;
;                                                                        ;
;------------------------------------------------------------------------;

(library
 (name test)
 (inline_tests)
 (preprocess
  (pps ppx_expect))
 (libraries opam-wix.lib opam-format))
